[package]
name = "glimmer_core"
version = "0.1.0"
authors = ["Avery Wagar <ajmw.subs@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
ed25519-dalek = { version = "0.9", features = ["serde"]}
rand = "0.6"
bincode = "*"
rayon = "*"
blake2b-rs = { path = "../blake2b-rs" }
num-bigint = "0.2"
num-traits = "*"
