[package]
name = "glimmer_core"
version = "0.1.0"
authors = ["Avery Wagar <ajmw.subs@gmail.com>"]
edition = "2018"

[dependencies]
# serde = { version = "*", features = ["derive"] }
# serde_json = "*"
# crypto-hash = "0.3.3"
rayon = "*"
blake2b-rs = { path = "../blake2b-rs" }
num-bigint = "0.2"
num-traits = "*"
